[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/characters/village_woman_idle/Woman idle5.png" type="Texture" id=1]
[ext_resource path="res://assets/characters/village_woman/walk4.png" type="Texture" id=2]
[ext_resource path="res://assets/characters/village_woman/walk1.png" type="Texture" id=3]
[ext_resource path="res://assets/characters/village_woman/walk5.png" type="Texture" id=4]
[ext_resource path="res://assets/characters/village_woman/walk2.png" type="Texture" id=5]
[ext_resource path="res://assets/characters/village_woman_idle/Woman idle2.png" type="Texture" id=6]
[ext_resource path="res://assets/characters/village_woman/walk3.png" type="Texture" id=7]
[ext_resource path="res://assets/characters/village_woman_idle/Woman idle3.png" type="Texture" id=8]
[ext_resource path="res://Intro/VillageWoman.gd" type="Script" id=9]
[ext_resource path="res://assets/fonts/Comfortaa/Comfortaa-VariableFont_wght.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://assets/audio/village_loud_sound.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/characters/village_woman_idle/Woman idle4.png" type="Texture" id=12]
[ext_resource path="res://assets/characters/village_woman_idle/Woman idle1.png" type="Texture" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 12 ), ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 2.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 2 ), ExtResource( 4 ) ],
"loop": true,
"name": "walk",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 425, 90 )

[sub_resource type="DynamicFont" id=3]
size = 32
extra_spacing_top = 7
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=5]
size = 26
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=4]
size = 32
extra_spacing_top = 7
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=6]
size = 26
font_data = ExtResource( 10 )

[node name="VillageWoman" type="TextureButton"]
margin_left = -20.0
margin_top = -70.0
margin_right = 80.0
margin_bottom = 140.0
rect_min_size = Vector2( 80, 100 )
script = ExtResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 50, 110 )
frames = SubResource( 1 )
animation = "idle"
frame = 2
playing = true
flip_h = true

[node name="DetectArea" type="Area2D" parent="."]
position = Vector2( 20, 60 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea"]
position = Vector2( -405, 50 )
shape = SubResource( 2 )

[node name="PlayerTalk" type="ColorRect" parent="."]
visible = false
margin_left = -930.0
margin_top = -450.0
margin_right = -380.0
margin_bottom = -160.0
color = Color( 0.933333, 0.901961, 0.901961, 0.862745 )

[node name="ColorRect" type="ColorRect" parent="PlayerTalk"]
margin_left = 10.0
margin_top = 10.0
margin_right = 540.0
margin_bottom = 280.0
color = Color( 0.160784, 0.145098, 0.145098, 0.882353 )

[node name="PlayerLabel" type="RichTextLabel" parent="PlayerTalk"]
margin_left = 60.0
margin_top = 40.0
margin_right = 530.0
margin_bottom = 260.0
custom_fonts/normal_font = SubResource( 3 )
text = "Hello, my name is Dr Saraha Bari. I am here to help your children."

[node name="PressSarah" type="Label" parent="PlayerTalk"]
unique_name_in_owner = true
margin_left = 320.0
margin_top = 240.0
margin_right = 532.0
margin_bottom = 270.0
custom_fonts/font = SubResource( 5 )
text = "Press Spacebar"

[node name="WomanTalk" type="ColorRect" parent="."]
visible = false
margin_left = -100.0
margin_top = -380.0
margin_right = 450.0
margin_bottom = -90.0
color = Color( 0.933333, 0.901961, 0.901961, 0.862745 )

[node name="ColorRect2" type="ColorRect" parent="WomanTalk"]
margin_left = 10.0
margin_top = 10.0
margin_right = 540.0
margin_bottom = 280.0
color = Color( 0.160784, 0.145098, 0.145098, 0.882353 )

[node name="WomanLabel" type="RichTextLabel" parent="WomanTalk"]
margin_left = 20.0
margin_top = 20.0
margin_right = 540.0
margin_bottom = 280.0
custom_fonts/normal_font = SubResource( 4 )
text = "Hello, my name is Dr Saraha Bari. I am here to help your children."

[node name="PressWoman" type="Label" parent="WomanTalk"]
unique_name_in_owner = true
margin_left = 320.0
margin_top = 240.0
margin_right = 532.0
margin_bottom = 270.0
custom_fonts/font = SubResource( 6 )
text = "Press Spacebar"

[node name="Loud" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -8.0

[node name="Voices" type="AudioStreamPlayer" parent="."]

[connection signal="body_entered" from="DetectArea" to="." method="_on_DetectArea_body_entered"]
[connection signal="finished" from="Loud" to="." method="_on_Loud_finished"]
